Porgramm läuft stabil ( Fehler bei Uhrzeit rechen ) TODO -Formatierung ändern -Frame einbauen um Elmente zu löschen bzw hinzufügen

--- a/GleitZeitRechner/res/layout/activity_time_line.xml
+++ b/GleitZeitRechner/res/layout/activity_time_line.xml
@@ -8,40 +8,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TimeLineActivity" >
 
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/wochenZeitT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wochenZeitS"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/weekTimeT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/weekTimeS"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
     </ListView>
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/listView"
-        android:layout_alignTop="@+id/listView"
-        android:layout_marginRight="42dp"
-        android:text="@string/weekTime"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <Button
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/listView"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="17dp"
-        android:text="@string/delete" />
-
-    <TextView
-        android:id="@+id/weekTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/delete"
-        android:layout_alignBottom="@+id/delete"
-        android:layout_alignRight="@+id/textView1"
-        android:text="@string/zeitWoche"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
