Prog läuft mit Datenbank anbindung die die Daten sichert

--- a/GleitZeitRechner/res/layout/activity_time_line.xml
+++ b/GleitZeitRechner/res/layout/activity_time_line.xml
@@ -18,13 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wochenZeitS"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/Mittel" />
 
         <TextView
             android:id="@+id/weekTimeT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_marginLeft="20dp"
             android:text="@string/weekTimeS"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -36,5 +37,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
     </ListView>
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/listView"
+        android:layout_marginRight="23dp"
+        android:text="@string/delete" />
 
 </RelativeLayout>
