--- a/GleitZeitRechner/res/layout/activity_rechner.xml
+++ b/GleitZeitRechner/res/layout/activity_rechner.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
-        android:gravity="center_vertical|right"
+        android:gravity="bottom|right"
         android:hint="@string/bspTs"
         android:inputType="time" />
 
@@ -35,7 +35,7 @@
         android:layout_marginTop="37dp"
         android:layout_weight="1"
         android:ems="10"
-        android:gravity="center_vertical|right"
+        android:gravity="bottom|right"
         android:hint="@string/bspTb"
         android:inputType="time" />
 
@@ -53,7 +53,7 @@
         android:layout_marginTop="46dp"
         android:layout_weight="1"
         android:ems="10"
-        android:gravity="center_vertical|right"
+        android:gravity="bottom|right"
         android:hint="@string/bspTe"
         android:inputType="time" />
 
